feat(product): make task with ajax-request

--- a/index.html
+++ b/index.html
@@ -4,7 +4,18 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Tasks</title>
-        <script src="./script.js"></script>
     </head>
-    <body></body>
+    <body>
+    <div class="root">
+        <button class="click-me">Get</button>
+        <label for="number">Номер</label>
+        <input type="number" value="" id="number" class="number">
+        <ul class="result"></ul>
+    </div>
+    <script
+            src="https://code.jquery.com/jquery-2.2.4.js"
+            integrity="sha256-iT6Q9iMJYuQiMWNd9lDyBUStIq/8PuOW33aOqmvFpqI="
+            crossorigin="anonymous"></script>
+    <script src="script.js"></script>
+    </body>
 </html>
