--- a/index.html
+++ b/index.html
@@ -17,5 +17,6 @@
             integrity="sha256-iT6Q9iMJYuQiMWNd9lDyBUStIq/8PuOW33aOqmvFpqI="
             crossorigin="anonymous"></script>
     <script src="script.js"></script>
+    <script src="service.js"></script>
     </body>
 </html>
