--- a/index.html
+++ b/index.html
@@ -12,10 +12,7 @@
         <input type="number" value="" id="number" class="number">
         <ul class="result"></ul>
     </div>
-    <script
-            src="https://code.jquery.com/jquery-2.2.4.js"
-            integrity="sha256-iT6Q9iMJYuQiMWNd9lDyBUStIq/8PuOW33aOqmvFpqI="
-            crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="script.js"></script>
     <script src="service.js"></script>
     </body>
