feat(product): make post request

--- a/index.html
+++ b/index.html
@@ -7,13 +7,15 @@
     </head>
     <body>
     <div class="root">
-        <button class="click-me">Get</button>
+        <button class="get-img">Get images</button>
         <label for="number">Номер</label>
         <input type="number" value="" id="number" class="number">
-        <ul class="result"></ul>
+        <ul class="result-img"></ul>
+        <button class="get-tasks">Get tasks</button>
+        <ul class="result-tasks"></ul>
     </div>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    <script src="script.js"></script>
     <script src="service.js"></script>
+    <script src="script.js"></script>
     </body>
 </html>
